--- a/templates/master.html
+++ b/templates/master.html
@@ -21,6 +21,7 @@
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="page-header">
         <h1><a href="/">{{strings.title}} <small>{{strings.tagline}}</small></a></h1>
+        <div id="discobot"></div>
       </div>
       <!-- Example row of columns -->
       <div class="row">
